--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -79,6 +79,19 @@ header .navbar{
     
 }
 
+header .navbar .hamburger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+header .navbar .hamburger span {
+    height: 3px;
+    width: 25px;
+    background-color: #00D1F9;
+    margin: 4px 0;
+    border-radius: 2px;
+}
 header .navbar ul{
     display: flex;
     flex-direction: row;
