--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2000,7 +2000,8 @@ animation: spin 0.6s ease-out;
     background: #fff; /* optional: background for dropdown */
     position: absolute;
     top: 60px; /* adjust to your navbar height */
-    right: 20px;
+    left: 20px;
+    gap: 10px;
     padding: 20px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.1);
   }
