--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2000,7 +2000,7 @@ animation: spin 0.6s ease-out;
     background: #fff; /* optional: background for dropdown */
     position: absolute;
     width: 100vw;
-    height: auto;
+    height: 100vh;
     top: 60px; /* adjust to your navbar height */
     left: 20px;
     gap: 10px;
