--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2000,8 +2000,8 @@ animation: spin 0.6s ease-out;
     background: #fff; /* optional: background for dropdown */
     position: absolute;
     width: 100vh;
-    height: auto;
-    top: 70px; /* adjust to your navbar height */
+    height: 100vh;
+    top: 85px; /* adjust to your navbar height */
     left: 20px;
     gap: 10px;
     padding: 20px;
