--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2008,6 +2008,10 @@ animation: spin 0.6s ease-out;
     box-shadow: 0 8px 16px rgba(0,0,0,0.1);
   }
 
+   header .navbar ul li {
+    text-align: left;
+    text-decoration: none;
+   }
   header .navbar .hamburger {
     display: flex; /* show hamburger */
   }
