--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2011,7 +2011,7 @@ animation: spin 0.6s ease-out;
    header .navbar ul a {
     text-align: left;
     text-decoration: none;
-    padding: 20px 10px;
+    padding: 10px;
    }
   header .navbar .hamburger {
     display: flex; /* show hamburger */
