--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1999,7 +1999,7 @@ animation: spin 0.6s ease-out;
     flex-direction: column;
     background: #fff; /* optional: background for dropdown */
     position: absolute;
-    /* width: 100%; */
+    width: 100%;
     /* height: auto; */
     top: 86px; /* adjust to your navbar height */
     left: 20px;
