--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2002,7 +2002,7 @@ animation: spin 0.6s ease-out;
     width: 100%;
     /* height: auto; */
     top: 86px; /* adjust to your navbar height */
-    left: 20px;
+    /* left: 20px; */
     gap: 10px;
     padding: 20px;
     border: red 1px solid;
