--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -17,7 +17,7 @@ body {
     background-size: cover;
     width: auto;
     height: 750px;
-    text-align: center;
+    /* text-align: center; */
 
 }
 
