--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2005,7 +2005,7 @@ animation: spin 0.6s ease-out;
     left: 0;
     gap: 20px;
     padding: 20px;
-    border: red 1px solid;
+    /* border: red 1px solid; */
     text-align: left !important;
     box-shadow: 0 8px 16px rgba(0,0,0,0.1);
   }
