--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -191,6 +191,7 @@ header .navbar ul .order-now button:hover {
             max-width: 1200px;
             margin-left: auto;
             margin-right: auto;
+            border: 1px solid red;
             
             /* Animation properties */
             
@@ -2022,5 +2023,7 @@ animation: spin 0.6s ease-out;
   header .navbar ul.show {
     display: flex; /* show nav links when toggled */
   }
+
+
 }
 
